<resources>
    <string name="app_name">Find Android Projects</string>
    <string name="repositories_title_toolbar">Repositórios Kotlin</string>
    <string name="pull_requests_title_toolbar">Pull Requests Kotlin</string>

    <!-- Accessibility String-->
    <string name="description_repository_accessibility">Descrição do repositório</string>
    <string name="title_repository_accessibility">Título do repositório</string>
    <string name="fork_count_accessibility">Quatidade de ramificaçoes</string>
    <string name="stars_count_accessibility">Quantidade de favoritos</string>
    <string name="user_picture_accessibility">Foto do usuário</string>
    <string name="username_accessibility">Nome do dono do projeto</string>
    <string name="info_card_accessibility">Informações do repositório card</string>
    <string name="info_pull_request_accessibility">Informações do pull request Card</string>
    <string name="link_icon_accessibility">Link externo</string>
    <string name="popular_kotlin_repositories">Popular Kotlin repositories</string>
    <string name="there_aren_t_any_open_pull_requests">There aren’t any open pull requests.</string>
</resources>