<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcPullRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_10dp"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:importantForAccessibility="yes"
        app:cardBackgroundColor="@color/gray"
        android:contentDescription="@string/info_pull_request_accessibility"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:targetApi="p">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPullRequestNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_10dp"
                android:layout_marginTop="@dimen/margin_default_20dp"
                android:contentDescription="@string/title_repository_accessibility"
                android:fontFamily="@font/monasans_bold"
                android:importantForAccessibility="yes"
                android:maxEms="5"
                android:maxLines="1"
                android:text="fsdf"
                android:textColor="@color/blue"
                android:textSize="@dimen/large_text_size_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPullRequestName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_repository_accessibility"
                android:fontFamily="@font/monasans_bold"
                android:importantForAccessibility="yes"
                android:maxEms="16"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size_14sp"
                android:layout_marginStart="@dimen/margin_default_2dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPullRequestNumber"
                app:layout_constraintStart_toEndOf="@+id/tvPullRequestNumber"
                app:layout_constraintTop_toTopOf="@+id/tvPullRequestNumber" />

            <TextView
                android:id="@+id/tvPullRequestDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_default_4dp"
                android:contentDescription="@string/description_repository_accessibility"
                android:fontFamily="@font/monasans_medium"
                android:importantForAccessibility="yes"
                android:maxEms="20"
                android:maxLines="2"
                android:textAlignment="textStart"
                android:text=""
                android:textColor="@color/gray_light"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintStart_toStartOf="@+id/tvPullRequestNumber"
                app:layout_constraintTop_toBottomOf="@id/tvPullRequestName" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvOwnerAvatar"
                android:layout_width="@dimen/size_profile_small"
                android:layout_height="@dimen/size_profile_small"
                android:layout_marginVertical="@dimen/margin_default_10dp"
                android:contentDescription="@string/user_picture_accessibility"
                android:fontFamily="@font/monasans_medium"
                android:importantForAccessibility="yes"
                app:cardCornerRadius="@dimen/corner_radius_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvPullRequestDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvPullRequestDescription">

                <ImageView
                    android:id="@+id/ivOwnerAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_4dp"
                android:contentDescription="@string/username_accessibility"
                android:fontFamily="@font/monasans_medium"
                android:importantForAccessibility="yes"
                android:maxEms="16"
                android:maxLines="2"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/purple_light"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/cvOwnerAvatar"
                app:layout_constraintStart_toEndOf="@+id/cvOwnerAvatar"
                app:layout_constraintTop_toTopOf="@+id/cvOwnerAvatar" />

            <ImageView
                android:id="@+id/ivLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default_24dp"
                android:contentDescription="@string/link_icon_accessibility"
                android:importantForAccessibility="yes"
                android:src="@drawable/external_link_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>